--- a/packages/assignment-ui/package.json
+++ b/packages/assignment-ui/package.json
@@ -1,7 +1,8 @@
 {
   "name": "assignment-ui",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.tsx",
+  "types": "index.tsx",
   "license": "MIT",
   "dependencies": {
     "typescript": "^5.3.3"
