--- a/packages/assignment-ui/package.json
+++ b/packages/assignment-ui/package.json
@@ -6,5 +6,11 @@
   "license": "MIT",
   "dependencies": {
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "tailwind-config":"*"
   }
 }
