--- a/packages/assignment-ui/package.json
+++ b/packages/assignment-ui/package.json
@@ -1,16 +1,24 @@
 {
   "name": "assignment-ui",
   "version": "1.0.0",
-  "main": "index.tsx",
-  "types": "index.tsx",
+  "main": "./index.tsx",
+  "types": "./index.tsx",
   "license": "MIT",
+
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+
+  },
   "dependencies": {
     "typescript": "^5.3.3"
   },
+
   "devDependencies": {
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "tailwind-config":"*"
+    "tailwind-config": "*",
+    "tailwindcss": "^3.4.1"
   }
+
+
 }
