added api for fake json data

--- a/apps/assignment/package.json
+++ b/apps/assignment/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "assignment-ui": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "assignment-ui":"*"
-
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -26,9 +26,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
+    "tailwind-config": "*",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "tailwind-config":"*"
+    "vite": "^5.0.8"
   }
 }
